--- a/ops/dna/php-app.json
+++ b/ops/dna/php-app.json
@@ -1,19 +1,16 @@
 {
-  "name": "php-app",
-  "description": "OpsWorks recipe run-list for the PHP app layer",
-  "default_attributes": {
-  },
-  "run_list": [
-    "recipe[opsworks_initial_setup]",
-    "recipe[mysql::client]",
-    "recipe[dependencies]",
-    "recipe[opsworks_ganglia::client]",
-    "recipe[mod_php5_apache2]",
-    "recipe[deploy::default]",
-    "recipe[deploy::php]",
-    "recipe[opsworks_ganglia::configure-client]",
-    "recipe[php::configure]"
-  ],
-  "chef_type": "role",
-  "json_class": "Chef::Role"
+  "opsworks_custom_cookbooks": {
+    "recipes": [
+      "recipe[opsworks_initial_setup]",
+      "recipe[mysql::client]",
+      "recipe[dependencies]",
+      "recipe[opsworks_ganglia::client]",
+      "recipe[mod_php5_apache2]",
+      "recipe[deploy::default]",
+      "recipe[deploy::php]",
+      "recipe[phpapp::appsetup]",
+      "recipe[opsworks_ganglia::configure-client]",
+      "recipe[php::configure]"
+    ]
+  }
 }
