add missing opsworks lifecycle recipes to the chef run list

--- a/ops/dna/php-app.json
+++ b/ops/dna/php-app.json
@@ -2,14 +2,18 @@
   "opsworks_custom_cookbooks": {
     "recipes": [
       "recipe[opsworks_initial_setup]",
+      "recipe[ssh_host_keys]",
+      "recipe[ssh_users]",
       "recipe[mysql::client]",
       "recipe[dependencies]",
+      "recipe[ebs]",
       "recipe[opsworks_ganglia::client]",
       "recipe[mod_php5_apache2]",
       "recipe[deploy::default]",
       "recipe[deploy::php]",
       "recipe[phpapp::appsetup]",
       "recipe[opsworks_ganglia::configure-client]",
+      "recipe[agent_version]",
       "recipe[php::configure]"
     ]
   }
