deploy repository path should be a relative, not absolute

--- a/ops/dna/php-app.json
+++ b/ops/dna/php-app.json
@@ -5,7 +5,7 @@
       "document_root": "",
       "scm": {
         "scm_type": "git",
-        "repository": "/vagrant/dev/simple-php"
+        "repository": "dev/simple-php"
       },
       "memcached": {},
       "database": {}
